jwt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: jwt
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: jwt
    app.kubernetes.io/name: jwt
    app.openshift.io/runtime: java
  name: jwt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt
  template:
    metadata:
      labels:
        app: jwt
    spec:
      containers:
      - name: jwt
        imagePullPolicy: Always
        image: image-registry.openshift-image-registry.svc:5000/common-service/jwt:41fe42023b5d87b0106034d67cb5a333f5c05f69
        ports:
        - containerPort: 8481
          protocol: TCP
