jwt/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jwt
  name: jwt
spec:
  ports:
  - name: 8481-tcp
    port: 8481
    protocol: TCP
    targetPort: 8481
  selector:
    app: jwt
  sessionAffinity: None
  type: ClusterIP
