jwt/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jwt
  name: jwt
spec:
  port:
    targetPort: 8481-tcp
  to:
    kind: Service
    name: jwt
    weight: 100
